...
                        },
                  child: Text(
                    !isAvailable
                        ? status.toUpperCase()
                        : hasClaimed
                            ? "CLAIMED"
                            : "Claim This Item",
                  ),
                ),
              ),
            ],
          ),
        );
...
